general adjustments: 'Introdução ao Projeto' and 'Condições e Características Importantes' sections

--- a/eso-project.bib
+++ b/eso-project.bib
@@ -359,4 +359,24 @@
   organization={Escola de Engenharia da Universidade do Minho}
 }
 
+@misc{car2go_locations,
+  title = {Car2Go Locations},
+  author = {CarSharing Association},
+  note = {\url{http://carsharing.org/car2go-locations/}}	
+}
+
+@article{cao_ramesh_2008,
+  title = {Agile Requirements Engineering Practices: An Empirical Study},
+  journal = {IEEE Software 2008},
+  author = {Lan Cao and Balasubramaniam Ramesh},
+  year = {2008}
+}
+
+@article{backmann_nord_ozkaya_2012,
+  title = {Architectural Tactics to Support Rapid and Agile Stability},
+  journal = {Crosstalk},
+  author = {Felix Bachmann, Robert L. Nord, Ipek Ozkaya},
+  year = {2008}
+}
+
 
