reviewed: Requirements Section

--- a/eso-project.bib
+++ b/eso-project.bib
@@ -379,4 +379,35 @@
   year = {2008}
 }
 
+@book{agile_sw_requirements,
+  title = {Agile Software Requirements},
+  author = {Dean Leffingwell},
+  year = {2011}
+}
+
+@article{agile_requirements_definition,
+  title = {Agile Requirements Definition: A View from Requirements Engineering},
+  journal = {Crosstalk},
+  author = {Armin Eberlein, ulio Cesar Sampaio do Prado Leite},
+  year = {2008}
+}
+
+@inproceedings{agile_requirements_definition,
+  title={Agile Requirements Definition: A View from Requirements Engineering},
+  author={Armin Eberlein, Julio Cesar Sampaio do Prado Leite},
+  organization={University of Calgary, PUC-Rio}
+}
+
+@book{agile_testing,
+  title = {Agile Testing: A Practical Guide for Testers and Agile Teams},
+  author = {Lisa Crispin, Janet Gregory},
+  year = {2009}
+}
+
+@inproceedings{arora_chauhan_2014,
+  title={An Object Oriented Design Approach for Modification of Rotten Code using Regression Testing & Refactoring},
+  author={Anita Arora, Naresh Chauhan},
+  organization={Computer Engineering, YMCA University of Science & Technology, Faridabad, Haryana, INDIA}
+  year = {2014}
+}
 
