--- a/eso-project.bib
+++ b/eso-project.bib
@@ -385,13 +385,6 @@
   year = {2011}
 }
 
-@article{agile_requirements_definition,
-  title = {Agile Requirements Definition: A View from Requirements Engineering},
-  journal = {Crosstalk},
-  author = {Armin Eberlein, ulio Cesar Sampaio do Prado Leite},
-  year = {2008}
-}
-
 @inproceedings{agile_requirements_definition,
   title={Agile Requirements Definition: A View from Requirements Engineering},
   author={Armin Eberlein, Julio Cesar Sampaio do Prado Leite},
@@ -405,9 +398,9 @@
 }
 
 @inproceedings{arora_chauhan_2014,
-  title={An Object Oriented Design Approach for Modification of Rotten Code using Regression Testing & Refactoring},
+  title={An Object Oriented Design Approach for Modification of Rotten Code using Regression Testing and Refactoring},
   author={Anita Arora, Naresh Chauhan},
-  organization={Computer Engineering, YMCA University of Science & Technology, Faridabad, Haryana, INDIA}
+  organization={YMCA University of Science and Technology, Faridabad, Haryana, INDIA},
   year = {2014}
 }
 
