reviewed: 'Construcao' section

--- a/eso-project.bib
+++ b/eso-project.bib
@@ -404,3 +404,8 @@
   year = {2014}
 }
 
+@misc{agilemanifesto,
+  title = {Manifesto for Agile Software Development},
+  note = {\url{http://agilemanifesto.org/}}
+}
+
