--- a/eso-project.tex
+++ b/eso-project.tex
@@ -116,64 +116,37 @@ Os requisitos serão validados através de testes de aceitação, de duas formas
 
 \subsection{Design}
 
-No início do projeto (antes da primeira iteração), considerando a visão geral e
-o entendimento dos requisitos de maior prioridade, o design de software
-arquitetural (top-level) \cite{society_software_2004} será definido por um % pg 3-1
-engenheiro de software com perfil sênior em desenvolvimento. Após isto, a cada
-iteração, o trabalho de design detalhado será incorporado no trabalho dos
-desenvolvedores da equipe, de forma que o design não será mais dissociado da
-construção, e sim será parte desta \cite{fowler_planned_evolutionary_design}. O
-engenheiro sênior em desenvolvimento pode definir design arquitetural para
-futuras iterações, dependendo da necessidade, e trabalhar juntamente com o time
-na definição do design detalhado, durante a iteração. O design arquitetural
-deverá ser documentado em alto nível, considerando aspectos como estilo
-arquitetural sendo utilizado, forma de tratamento de eventos, forma de lidar
-com concorrência, distribuição de componentes, persistência de dados.
+No início do projeto (antes da primeira iteração), considerando a visão geral e o entendimento dos requisitos de maior prioridade, o design de software arquitetural (top-level) \cite{society_software_2004} será definido por um % pg 3-1 
+engenheiro de software com perfil sênior em desenvolvimento. Após isto, a cada iteração, o trabalho de design detalhado será incorporado no trabalho dos desenvolvedores da equipe, de forma que o design não será mais dissociado da construção, e sim será parte desta (seguindo o conceito de "design evolucionário", que se faz viável pelas práticas de teste e integração contínua reforçadas pelos métodos ágeis) \cite{fowler_planned_evolutionary_design}. O engenheiro sênior em desenvolvimento pode definir design arquitetural para futuras iterações, dependendo da necessidade, e trabalhar juntamente com o time na definição do design detalhado, durante a iteração. O design arquitetural deverá ser documentado em alto nível, e para a característica da MotorBRAS (vários times trabalhando em subsistemas diferentes - distribuídos e não-distribuídos - que definem um sistema como um todo) serão considerados aspectos tais como estilo arquitetural sendo utilizado, forma de tratamento de eventos, forma de lidar com concorrência, distribuição de componentes, persistência de dados \cite{society_software_2004}.
 
-Já a responsabilidade de design detalhado cabe a todos os desenvolvedores do time, e não será exigida documentação formal para tal, pois assume-se o conceito de que o "código-fonte é o design" (ou seja, seguindo a visão de design do XP, o design existe como uma forma diferente, significando a prática de manter o código claro, uso de práticas de refatoração, conhecimento e aplicação de padrões de projeto, ter um olho em mudanças futuras e saber comunicar o design por meio de conversação \cite{fowler_design_dead}). Contudo, será necessário validar a qualidade deste design, o que será feito através da elaboração de relatório de inspeção de código a cada iteração, que deve considerar as questões do documento de design arquitetural, além de técnicas de design, como: abstração, acoplamento, coesão, decomposição, modularização, encapsulamento, separação de responsabilidades, design patterns. 
+Já a responsabilidade de design detalhado cabe a todos os desenvolvedores do time, e não será exigida documentação formal para tal, pois assume-se o conceito de que o "código-fonte é o design" (ou seja, seguindo a visão de design do XP, o design existe como uma forma diferente, significando a prática de manter o código claro, uso de técnicas de refatoração e integração contínua, conhecimento e aplicação de padrões de projeto, ter um olho em mudanças futuras e saber comunicar o design por meio de conversação \cite{fowler_design_dead}). Contudo, será necessário validar a qualidade deste design, o que será feito através da elaboração de relatório de inspeção de código a cada iteração, que deve considerar as questões do documento de design arquitetural, além de técnicas de design valorizadas no projeto da MotorBRAS (paradigma orientado a objetos), tais como: abstração, acoplamento, coesão, decomposição, modularização, encapsulamento, separação de responsabilidades, design patterns. 
 
 O relatório será realizado pelo engenheiro de software da própria equipe que agregar o papel de sênior, e deve ser entregue como um artefato da iteração (relatório de qualidade de design). A responsabilidade pela veracidade do documento é de toda a equipe.
 
 Além deste relatório, a qualidade do design também será garantida através de:
 \begin{itemize}
-\item práticas diárias de DDD: para permitir uma modelagem do design alinhada com as regras de negócio sendo utilizadas. O DDD faz uso de um diagrama simplificado de classes para modelar o entendimento;
+\item práticas de DDD: para permitir uma modelagem do design alinhada com as regras de negócio sendo utilizadas. O DDD faz uso de um diagrama simplificado de classes para modelar o entendimento;
 \item práticas diárias de pair programming e TDD \cite{begel_pair_2008}\cite{nagappan_realizing_2008}: que orientam o desenvolvedor no sentido de escrever um código claro e seguindo o paradigma de orientação a objetos;
 \item práticas automatizadas: análise estática de código, para garantir que boas práticas de design estão sendo adotadas no código sendo escrito \cite{karpov_static_code_analysis}. Esta prática não deve ser avaliada apenas no final da iteração, mas diariamente, por todo o time.
 \end{itemize}
 
-Em relação às descrições estruturais, espera-se que o documento de arquitetura defina diagramas de deployment, e é desejável que os diagramas de classes simplificados que surgem da prática de DDD também sejam documentados (a ser definido pelo time).
+Em relação às descrições estruturais, o documento de arquitetura deve definir diagramas de deployment (já que o ambiente de deploy da MotorBRAS em produção não permite deploy automático por questões de segurança, de forma que o diagrama de deployment irá orientar o empregado da MotorBRAS que for realizar o deployment manualmente), e é desejável que os diagramas de classes simplificados que surgem da prática de DDD também sejam documentados (a ser definido pelo time).
 
 Para este projeto, a estratégia de design é baseada em design orientado a objeto \cite{society_software_2004}, por ser um modelo comumente difundido pelos membros do time e por ser adequar ao projeto proposto.
 
 
 \subsection{Construção}
 
-Neste projeto as disciplinas de Design e Construção \cite{society_software_2004} serão conduzidas de forma muito próxima. Os engenheiros de software com perfil de programadores terão poder de definir o design detalhado bem como a codificação, sempre orientados por um programador sênior e pelo design arquitetural. O programador poderá, portanto, aplicar os fundamentos de minimização de complexidade, antecipação de mudanças e construção para verificação tanto em design quanto em construção, sem a necessidade de haver distinções. % pg 4-3 do SWEBOK, seção 2.1
+Neste projeto as disciplinas de Design e Construção \cite{society_software_2004} serão conduzidas de forma muito próxima, o que está alinhado com a filosofia dos métodos ágeis de desenvolvimento \cite{fowler_design_dead}, adotada neste projeto para a MotorBRAS. Os engenheiros de software com perfil de programadores terão poder de definir o design detalhado bem como a codificação, sempre orientados por um programador sênior e pelo design arquitetural. O programador poderá, portanto, aplicar os fundamentos de minimização de complexidade, antecipação de mudanças e construção para verificação tanto em design quanto em construção, sem a necessidade de haver distinções. % pg 4-3 do SWEBOK, seção 2.1
 
-É esperado que o programador reduza a complexidade em tudo o que for fazer, utilizando os melhores algoritmos e padrões. Também é esperado que o código seja escrito de forma a permitir futuras modificações sem grande impacto (e para isso, é exigido que a prática de TDD seja adotada, e o conceito de refatoração seja entendido \cite{Fowler1999}). Outras práticas que serão exigidas do programador são a escrita de testes unitários e de integração \cite{unit_int_func_testing}. A verificação da adoção destas práticas será realizada juntamente com a validação de qualidade do design, descrita no tópico anterior. 
+É esperado que o programador reduza a complexidade em tudo o que fizer, utilizando os melhores algoritmos e padrões. Também é esperado que o código seja escrito de forma a permitir futuras modificações sem grande impacto (e para isso, é exigido que a prática de TDD seja adotada, e o conceito de refatoração seja entendido \cite{Fowler1999}). Outras práticas que serão exigidas do programador são a escrita de testes unitários e de integração \cite{unit_int_func_testing}. A verificação da adoção destas práticas será realizada juntamente com a validação de qualidade do design, descrita no tópico anterior. O objetivo destas técnicas é reduzir o custo e o risco na modificação de código-fonte existente e na adição de novo código-fonte sobre código-fonte já existente, de forma a causar menor impacto no sistema já funcionando: uma vez que assume-se que os requisitos da MotorBRAS irão mudar constantemente, é preciso que a construção seja capaz de lidar com essa contínua necessidade de mudanças.
 
-Também será exigido que o programador escreva testes de aceitação baseados em BDD \cite{chelimsky2010rspec}, contra cada história da especificação que implementa, para garantir que seu código seja verificável. Estes testes serão executados diariamente, gerando relatórios que indicam se o código é válido em relação ao esperado. Será exigido que o programador siga os padrões de desenvolvimento de código da empresa, e a ferramenta de análise estática de código irá indicar se os padrões estão sendo ignorados, diariamente, durante a iteração. Códigos não-conformes devem ser corrigidos o mais rápido possível, no prazo máximo de duração da iteração.
+Também será exigido que o programador escreva testes de aceitação baseados em BDD \cite{chelimsky2010rspec}, contra cada história da especificação que implementa. O propósito é o de garantir que seu código-fonte seja verificado automaticamente em relação ao requisito que implementa. Estes testes serão executados diariamente, gerando relatórios que indicam se o código é válido em relação ao esperado. Será exigido que o programador siga os padrões de desenvolvimento de código da empresa, e a ferramenta de análise estática de código irá indicar se os padrões estão sendo ignorados, diariamente, durante a iteração. 
 
-Não será exigido uso formal de UML ou outro tipo específico de notação \cite{society_software_2004}; contudo, o time pode optar por utilizar UML (bem como qualquer outra forma visual de design) para facilitar a comunicação e/ou o entendimento de um dado objeto ou conjunto de objetos que precisa ser criado ou alterado. % pg 4-4
+Não será exigido uso formal de UML ou outro tipo específico de notação \cite{society_software_2004}; contudo, o time pode optar por utilizar UML (bem como qualquer outra forma visual de design) para facilitar a comunicação e/ou o entendimento de um dado objeto ou conjunto de objetos que precisa ser criado ou alterado. % pg 4-4 
+Esta opcionalidade da documentação, a cargo do time, está diretamente vinculada ao princípio do manifesto ágil que sugere que indivíduos e interações geram mais valor do que processos e ferramentas \cite{agilemanifesto}.
 
-O modelo de construção que será adotado neste projeto é o Scrum
-\cite{schwaber_scrum_2013}. Este modelo iterativo trata a construção de forma
-concorrente a outras atividades de desenvolvimento de software, como os
-requisitos, o design e os testes. Todas estas atividades interagem juntamente
-nesta fase de construção; desta forma, o planejamento da construção se dá
-iterativamente, envolvendo todas as atividades: desde a fase de análise (com a
-definição dos requisitos da especificação como histórias por ordem de
-prioridade, e o entendimento profundo destas através da elaboração de
-cenários), passando por  uma estimativa para a iteração (onde time discute e
-define quantas histórias da especificação podem ser realizadas, considerando a
-prioridade) e pela construção propriamente dita (onde os programadores geram
-código considerando design, os analistas documentam as histórias e os testers
-validam as histórias contra o sistema conforme vão sendo finalizadas), e
-finalizando na entrega (onde os stakeholder validam, numa reunião de
-demonstração, o sistema rodando, a documentação e demais artefatos que tenham
-sido previamente combinados a serem entregues).  Para medida das iterações, são
-utilizadas as métricas já descritas nos tópicos anteriores, bem como o próprio
-aval dos stakeholders.
+O modelo de construção que será adotado neste projeto é o Scrum \cite{schwaber_scrum_2013}, por ser um modelo de desenvolvimento ágil consolidado (e faz-se uso do modelo de desenvolvimento ágil por ser flexível em relação a grande taxas de mudanças de requisitos, característica esta presente no projeto da MotorBRAS). Este modelo iterativo trata a construção de forma concorrente a outras atividades de desenvolvimento de software, como os requisitos, o design e os testes. Todas estas atividades interagem juntamente nesta fase de construção; desta forma, o planejamento da construção se dá iterativamente, envolvendo todas as atividades: desde a fase de análise (com a definição dos requisitos da especificação como histórias por ordem de prioridade, e o entendimento profundo destas através da elaboração de cenários), passando por  uma estimativa para a iteração (onde time discute e define quantas histórias da especificação podem ser realizadas, considerando a prioridade) e pela construção propriamente dita (onde os programadores geram código considerando design, os analistas documentam as histórias e os testers validam as histórias contra o sistema conforme vão sendo finalizadas), e finalizando na entrega (onde os stakeholder validam, numa reunião de review, o sistema rodando, a documentação e demais artefatos que tenham sido previamente combinados a serem entregues).  Para medida das iterações, são utilizadas as métricas já descritas nos tópicos anteriores, bem como o próprio aval dos stakeholders.
 
 
 \subsection{Testes}
