reviewed: 'Teste' section

--- a/eso-project.bib
+++ b/eso-project.bib
@@ -409,3 +409,8 @@
   note = {\url{http://agilemanifesto.org/}}
 }
 
+@misc{pairprogramming,
+  title = {Pair Programming},
+  note = {\url{http://www.extremeprogramming.org/rules/pair.html}}
+}
+
