reviewed: section 'Consideracoes Gerais'

--- a/eso-project.tex
+++ b/eso-project.tex
@@ -334,7 +334,7 @@ Entende-se (e o SWEBOK \cite{society_software_2004} sugere o mesmo) que o concei
 
 \section{Considerações Gerais}
 
-O projeto aqui proposto caminha lado-a-lado com a tendência atual de preocupação com o peso da vida humana na Terra. É assumido que os governos irão cada vez mais investir em tecnologia para resolver tais problemas, ao invés de considerar que haja uma mudança drástica de consciência no ser humano de forma geral. Este projeto assume que nos próximos anos esta tendência irá se acentuar, de forma a surgir uma oportunidade no mercado que favorecerá as empresas de vanguarda. Nosso projeto caminha nesta direção. 
+O projeto aqui proposto caminha lado-a-lado com a tendência atual de preocupação com os problemas relativos ao impacto dos seres humanos no meio ambiente. É assumido que os governos irão cada vez mais investir em tecnologia para resolver tais problemas, ao invés de considerar que haja uma mudança drástica de consciência do ser humano de forma geral. Este projeto assume que nos próximos anos esta tendência irá se acentuar, de forma a surgir uma oportunidade no mercado que favorecerá as empresas de vanguarda. Nosso projeto caminha nesta direção. 
 
 
 \section{Conclusão}
