Conclusion approaching ethical and economical aspects

--- a/eso-project.tex
+++ b/eso-project.tex
@@ -1,4 +1,4 @@
-\documentclass[12pt,journal,compsoc]{IEEEtran}
+﻿\documentclass[12pt,journal,compsoc]{IEEEtran}
 
 \usepackage[portuguese]{babel}
 \usepackage[utf8]{inputenc}
@@ -339,7 +339,32 @@ O projeto aqui proposto caminha lado-a-lado com a tendência atual de preocupaç
 
 \section{Conclusão}
 
-Este artigo procurou demonstrar como as diferentes disciplinas de engenharia de software expostas no SWEBOK podem ser aplicadas na resolução de um problema hipotético. A forma como as disciplinas do SWEBOK são abordadas tem um enfoque particular em práticas ágeis de desenvolvimento de software, de forma a demonstrar que tais práticas podem aplicadas dentro das orientações propostas pelo SWEBOK.
+% Este artigo procurou demonstrar como as diferentes disciplinas de engenharia de software expostas no SWEBOK podem ser aplicadas na resolução de um problema hipotético. A forma como as disciplinas do SWEBOK são abordadas tem um enfoque particular em práticas ágeis de desenvolvimento de software, de forma a demonstrar que tais práticas podem aplicadas dentro das orientações propostas pelo SWEBOK.
+
+% Sustentabilidade é um conceito que está em voga. Há um consenso em torno da necessidade de se tomar medidas para reduzir os impactos das atividades humanas na natureza. Há, porém, muita discordância a respeito de como conseguir essa redução de impactos.
+
+A escolha por um determinado meio de transporte envolve questões éticas 
+e econômicas. O trânsito caótico das grandes cidades é consequência de uma
+rede complexa de problemas: erros históricos no planejamento da cidade, falta de investimentos em
+meios de transporte de massa, questões culturais, entre outras. Mas, considerando
+a situação atual e as alternativas de curto prazo de que dispomos, levantam-se 
+questões marcadamente éticas como: \emph{"Se todos os proprietários de automóveis pagaram
+impostos para terem o direito de trafegar, é correto haver faixas exclusivas de ônibus?"}.
+\emph{"Devo, na medida do meu alcance, abrir mão de certos benefícios individuais em favor
+de um bem coletivo?"}
+
+Além disso, aspectos econômicos também estão envolvidos na opção por um meio
+de transporte. Não se trata simplesmente de dispor ou não de recursos suficientes
+para manter um automóvel, mas de uma rede complexa de decisões balanceando
+questões como tempo demandado pela viagem, nível de conforto esperado e
+possivelmente outros fatores, subjetivos ou não.
+
+O projeto aqui proposto apresenta potencial para influenciar em tais decisões
+de caráter ético, proporcionando uma maneira de se utilizar um automóvel
+consumindo menos espaço e, com isso, contribuindo para a mobilidade de toda a
+cidade. E, também, das decisões de caráter econômico, oferecendo uma nova alternativa 
+ao se ponderar os diferentes fatores envolvidos em uma viagem
+através da cidade.
 
 \bibliographystyle{IEEEtran}
 \bibliography{eso-project}
