Removing Byte Order Mark from eso-project.tex file (was causing miktex to halt)

--- a/eso-project.tex
+++ b/eso-project.tex
@@ -1,4 +1,4 @@
-﻿\documentclass[12pt,journal,compsoc]{IEEEtran}
+\documentclass[12pt,journal,compsoc]{IEEEtran}
 
 \usepackage[portuguese]{babel}
 \usepackage[utf8]{inputenc}
