--- a/eso-project.bib
+++ b/eso-project.bib
@@ -2,14 +2,14 @@
 	author = {{WWF}},
 	title = {Living Planet Report 2013 Infographic},
 	year = {2013},
-	note = {\url{http://goo.gl/G1ZfdQ}}
+	note = {\url{http://wwf.panda.org/about_our_earth/all_publications/living_planet_report/2013_infographic/}}
 }
 
 @misc{tiobe_language,
 	author = {{Tiobe}},
 	title = {The Java Programming Language},
 	year = {2014},
-	note = {\url{http://goo.gl/qi1Nk3}}
+	note = {\url{http://www.tiobe.com/index.php/content/paperinfo/tpci/Java.html}}
 }
 
 @article{nagappan_realizing_2008,
@@ -42,7 +42,7 @@
 
 @book{schwaber_scrum_2013,
 	title = {The Scrum Guide},
-	url = {http://goo.gl/o1ygXy},
+	url = {https://www.scrum.org/Portals/0/Documents/Scrum\%20Guides/2013/Scrum-Guide.pdf},
 	author = {Schwaber, Ken and Sutherland, Jeff},
 	year = {2013}
 }
@@ -61,7 +61,7 @@
 @misc{scrum_development_process,
 	title = {Scrum Development Process},
 	author = {Schwaber, Ken},	
-	note = {\url{http://goo.gl/Qret75}}
+	note = {\url{http://navegapolis.net/files/Scrum_Development_Process.pdf}}
 }
 
 @misc{agile_meth_hype_reality,
@@ -69,7 +69,7 @@
 	author = {Blechar, Michael},
 	publisher = {Gartner},
 	year = {2010},
-	note = {\url{http://goo.gl/QBVMru}}
+	note = {\url{http://blogs.gartner.com/michael\_blechar/2010/06/27/agile-methodologies-hype-or-reality/}}
 }
 
 @article{gartner_agile,
@@ -226,7 +226,7 @@
 	address = {Boston},
 	title = {Domain-driven design : tackling complexity in the heart of software},
 	isbn = {0321125215 9780321125217},
-	url = {http://www.worldcat.org/search? qt=worldcat\_org\_all\&q=0321125215},
+	url = {http://www.worldcat.org/search?qt=worldcat\_org\_all\&q=0321125215},
 	publisher = {Addison-Wesley},
 	author = {Evans, Eric},
 	year = {2004},
@@ -254,7 +254,7 @@
 @misc{fowler_planned_evolutionary_design,
 	title = {Planned and Evolutionary Design},
 	author = {Fowler, Martin},	
-	note = {\url{http://martinfowler.com/articles/ designDead.html\# PlannedAndEvolutionaryDesign}}
+	note = {\url{http://martinfowler.com/articles/designDead.html\#PlannedAndEvolutionaryDesign}}
 }
 
 @misc{fowler_design_dead,
@@ -266,20 +266,20 @@
 @misc{karpov_static_code_analysis,
   title = {Static code analysis},
   author = {Karpov Andrey},
-  note = {\url{http://www.codeproject.com/ Tips/344663/Static-code-analysis}},
+  note = {\url{http://www.codeproject.com/Tips/344663/Static-code-analysis}},
   year = {2012}}
 
 @misc{fowler_products_not_projects,
   title={Microservices},
   author={Fowler, Martin},
-  note = {\url{http://martinfowler.com/articles/microservices.html \#ProductsNotProjects}}
+  note = {\url{http://martinfowler.com/articles/microservices.html\#ProductsNotProjects}}
 }
 
 @misc{fowler_ci_2006,
   title={Continuous Integration},
   author={Fowler, Martin},
   year={2006},
-  note={\url{http://martinfowler.com/articles/ continuousIntegration.html}}
+  note={\url{http://martinfowler.com/articles/continuousIntegration.html}}
 }
 
 @book{Fowler1999,
@@ -301,7 +301,7 @@
 @misc{unit_int_func_testing,
   title = {Unit, Integration, and Functional Testing},
   author = {Pyramid Web Framework},
-  note = {\url{http://docs.pylonsproject.org/ projects/pyramid/en/ latest/narr/testing.html}}
+  note = {\url{http://docs.pylonsproject.org/projects/pyramid/en/latest/narr/testing.html}}
 }
 
 @inproceedings{zowghi2002study,
@@ -337,19 +337,19 @@
 @misc{java_report_2012,
   title = {Developer Productivity Report 2012; Java Tools, Tech, Devs and Data},
   author = {ZeroTurnaround},
-  note = {\url{http://goo.gl/UvkZtg}}
+  note = {\url{http://zeroturnaround.com/rebellabs/developer-productivity-report-2012-java-tools-tech-devs-and-data/4/}}
 }
 
 @misc{ci_fowler,
   title = {Continuous Integration},
   author = {Fowler, Martin},
-  note = {\url{http://goo.gl/cwQxIv}}
+  note = {\url{http://martinfowler.com/articles/continuousIntegration.html\#PracticesOfContinuousIntegration}}
 }
 
 @misc{scm_ranking,
   title = {SCM System Ranking},
   author = {Switch-Gears ApS},
-  note = {\url{http://goo.gl/Fq032K}}	
+  note = {\url{http://gitgear.com/why\_git/SCM\_Ranking\_2013Q3\_F1.pdf}}	
 }
 
 @inproceedings{quality_java_2010,
@@ -411,6 +411,6 @@
 
 @misc{pairprogramming,
   title = {Pair Programming},
-  note = {\url{http://www. extremeprogramming.org/ rules/pair.html}}
+  note = {\url{http://www.extremeprogramming.org/rules/pair.html}}
 }
 
