--- a/eso-project.tex
+++ b/eso-project.tex
@@ -4,10 +4,19 @@
 \usepackage[utf8]{inputenc}
 \usepackage{graphicx}
 \usepackage[font=small,labelfont=bf]{caption}
-\usepackage{breakurl}
+\usepackage[hyphens]{url}
 \usepackage{color}
 
 \newcommand{\hilight}[1]{\textbf{\textcolor{red}{#1}}} % para ajudar a destacar TODOs e outros alertas
+
+% para promover quebras de linhas em URLs
+% (referencias:	http://tex.stackexchange.com/questions/101195/line-breaks-and-the-url-package e
+%		http://tex.stackexchange.com/questions/3033/forcing-linebreaks-in-url/10401)
+\renewcommand{\UrlBreaks}%
+	{\do\/\do\a\do\b\do\c\do\d\do\e\do\f\do\g\do\h\do\i\do\j\do\k\do\l\do\m%
+	 \do\n\do\o\do\p\do\q\do\r\do\s\do\t\do\u\do\v\do\w\do\x\do\y\do\z\do\A%
+	 \do\B\do\C\do\D\do\E\do\F\do\G\do\H\do\I\do\J\do\K\do\L\do\M\do\N\do\O%
+	 \do\P\do\Q\do\R\do\S\do\T\do\U\do\V\do\W\do\X\do\Y\do\Z}
 
 \begin{document}
 
