--- a/eso-project.tex
+++ b/eso-project.tex
@@ -1,6 +1,6 @@
 \documentclass[12pt,journal,compsoc]{IEEEtran}
 
-\usepackage[portuguese]{babel}
+\usepackage[english,portuguese]{babel}
 \usepackage[utf8]{inputenc}
 \usepackage{graphicx}
 \usepackage[font=small,labelfont=bf]{caption}
@@ -31,7 +31,9 @@
 }
 
 \IEEEcompsoctitleabstractindextext{%
+\selectlanguage{english}
 \begin{abstract}
+\selectlanguage{portuguese}
 Nos dias atuais, o software está envolvido em todas as atividades, de processadores de texto a operações de naves espaciais. Num cenário onde os aplicativos apoiam praticamente todas as atividades humanas, é esperado que haja muita demanda de software em uma das indústrias mais tradicionais: a automobilística. Associada a outra preocupação constante -- o impacto no meio-ambiente --, este trabalho apresenta uma proposta para adição de valor, por meio de tecnologias de software, à seção de carros elétricos da empresa automobilística fictícia MotorBRAS. Expõe-se uma forma de aplicação de técnicas de engenharia de software que visam a geração de tecnologia para apoio à evolução do negócio, por meio de organização de um setor de desenvolvimento de software que aplique as devidas técnicas.  
 \end{abstract}
 \begin{IEEEkeywords}
